--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,9 +1,20 @@
+:root{
+    --purple-bg-color: #7510F7;
+    --white-bg-color: #fff;
+    --green-text-color:#00D1B2;
+}
+
 #about{
     display:flex;
     flex-direction: row;
     justify-content: center;
-    align-items:center;
+    background-color: var(--purple-bg-color);
+    height: 50vh;
+    color:var(--white-bg-color);
 }
-.about__image{
-    width:50vw;
+
+.about__description .about__section_title{
+    font-size: 1.2rem;
+    font-family: 'Maven Pro', sans-serif;
+    padding-bottom: 20px;
 }
