--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -1,3 +1,14 @@
+:root{
+    --purple-bg-color: #7510F7;
+    --white-bg-color: #fff;
+    --green-text-color:#00D1B2;
+}
+
+.skills__title{
+    font-size: 1.2rem;
+    font-family: 'Maven Pro', sans-serif;
+}
+
 .skills__container{
     display:flex;
     justify-content: space-evenly;
