--- a/src/css/techIcon.css
+++ b/src/css/techIcon.css
@@ -1,3 +1,17 @@
+:root{
+    --purple-bg-color: #7510F7;
+    --white-bg-color: #fff;
+    --green-text-color:#00D1B2;
+}
+
+
 .tech-icon{
     width:100px;
+    border: 2px solid var(--green-text-color);
+    border-radius: 5px;
+    padding: 5px;
+    margin:10px;
+}
+.tech-icon__wrapper{
+
 }
