--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,9 +1,35 @@
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+:root{
+  --purple-bg-color: #7510F7;
+  --white-bg-color: #fff;
+  --green-text-color:#00D1B2;
+}
+
+#project{
+  padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.project__link_wrapper{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.project__link_wrapper div{
+  padding: 10px;
+}
+
+.project__card_title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding:30px;
+}
+
 .flip-card {
     background-color: transparent;
     width: 360px;
-    height: 400px;
-    border: 1px solid #f1f1f1;
+    height: 360px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
@@ -29,17 +55,25 @@
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
+    border-radius: 5px;
   }
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #bbb;
-    color: black;
+    background-color: var(--green-text-color);
+    color: var(--white-bg-color);
+    padding:10px;
+    font-family: 'Maven Pro', sans-serif;
   }
   
   /* Style the back side */
   .flip-card-back {
-    background-color: dodgerblue;
+    background-color: var(--green-text-color);
     color: white;
     transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:10px;
   }
