--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -7,6 +7,7 @@
 .skills__title{
     font-size: 1.2rem;
     font-family: 'Maven Pro', sans-serif;
+    padding-bottom: 20px;
 }
 
 .skills__container{
