--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,6 @@
 #header{
     height:70vh;
+    margin-top: 96px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +11,8 @@
     font-family: 'Maven Pro', sans-serif;
 }
 .header__headshot{
-    width:15vw;
+    width:23vw;
+    min-width: 160px;
     border-radius: 50%;
     overflow: hidden;
 }
