--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,4 @@
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css";
 :root{
     --purple-bg-color: #7510F7;
     --white-bg-color: #fff;
@@ -7,6 +8,11 @@
     display:flex;
     justify-content: center;
 }
+
+.footer__email{
+    padding:7px;
+}
+
 #footer *{
     margin:10px;
 }
