added message sending div and error and success styling

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -21,3 +21,9 @@ input.button{
     color:var(--white-bg-color);
     border: 1px solid var(--purple-bg-color);
 }
+
+.sending.button{
+    background-color: var(--white-bg-color);
+    color:var(--purple-bg-color);
+    border:1px solid var(--purple-bg-color);
+}
