added styling to load

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,7 @@
   margin-top: 96px;
   color:var(--purple-bg-color);
   font-size: 1.2rem;
+  font-family: 'Maven Pro', sans-serif;
 }
 
 .load_spinner {
