--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,10 @@
     scroll-margin-top: 96px;
   }
 
+  .crud_page{
+    margin-top:100px;
+  }
+
 .load_screen_container{
   display: flex;
   flex-direction: column;
