added smooth scroll and max-width on about seciton

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,9 @@
   --white-bg-color: #fff;
   --green-text-color:#00D1B2;
 }
+html {
+  scroll-behavior: smooth;
+}
 #about{
     scroll-margin-top: 96px;
   }
